<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="120dp"
    android:padding="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/forma"
        android:orientation="vertical"
        android:paddingVertical="20dp">


        <TextView
            android:id="@+id/title"
            android:gravity="center"
            android:textSize="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/practice"
            android:textColor="@color/textoGrid"
            ></TextView>

        <TextView
            android:id="@+id/tv_days"
            android:layout_width="match_parent"
            android:layout_height="17dp"
            android:text="@string/everyday"
            android:gravity="center"
            android:autoSizeTextType="uniform"
            android:textSize="10sp"
            android:textColor="@color/textoGrid"></TextView>

        <TextView
            android:id="@+id/tv_time"
            android:textSize="14sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hora"
            android:textColor="@color/textoGrid"
            android:gravity="center"></TextView>





    </LinearLayout>



</LinearLayout>