<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="75dp"
    tools:context=".ui.home.HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">

    <ImageView
        android:src="@drawable/logobrain"
        android:layout_width="match_parent"
        android:layout_height="120dp">
    </ImageView>

    <TextView
        android:textStyle="italic"
        android:id="@+id/text_dash"
        android:layout_marginTop="10dp"
        android:textSize="15dp"
        android:text="@string/what_do_you_want"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/preguntas"
        ></TextView>
    <EditText
        android:id="@+id/et_task"
        android:backgroundTint="@color/colorPrimaryDark"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></EditText>

    <TextView
        android:textStyle="italic"
        android:textSize="15dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/preguntas"
        android:text="@string/when_do_you_want"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></TextView>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:textSize="18dp"
            android:text="Monday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"></TextView>
        <CheckBox
            android:id="@+id/checkMonday"
            android:layout_marginStart="100dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></CheckBox>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:textSize="18dp"
            android:text="Tuesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"></TextView>
        <CheckBox
            android:id="@+id/checkTuesday"
            android:layout_marginStart="96dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></CheckBox>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:textSize="18dp"
            android:text="Wednesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"></TextView>
        <CheckBox
            android:id="@+id/checkWednesday"
            android:layout_marginStart="72dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></CheckBox>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:textSize="18dp"
            android:text="Thursday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"></TextView>
        <CheckBox
            android:id="@+id/checkThusday"
            android:layout_marginStart="90dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></CheckBox>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:textSize="18dp"
            android:text="Friday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"></TextView>
        <CheckBox
            android:id="@+id/checkFriday"
            android:layout_marginStart="115dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></CheckBox>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:textSize="18dp"
            android:text="Saturday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"></TextView>
        <CheckBox
            android:id="@+id/checkSaturday"
            android:layout_marginStart="93dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></CheckBox>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:textSize="18dp"
            android:text="Sunday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"></TextView>
        <CheckBox
            android:id="@+id/checkSunday"
            android:layout_marginStart="105dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></CheckBox>
    </LinearLayout>

    <TextView
        android:textStyle="italic"
        android:layout_marginTop="20dp"
        android:text="@string/what_time"
        android:textColor="@color/preguntas"
        android:textSize="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </TextView>
    <Button
        android:id="@+id/btn_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Set time"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textColor="@color/gray"
        android:background="?android:attr/selectableItemBackground"
        android:textAlignment="textStart"/>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:paddingHorizontal="50dp"
        android:layout_gravity="center"
        android:textColor="@color/blanco"
        android:text="DONE"
        />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="30dp">
            </TextView>
        </LinearLayout>

    </ScrollView>



</LinearLayout>
